--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Nada Abdalgawad # the website title (if blank, full name will be used ins
 first_name: Nada
 middle_name: 
 last_name: Abdalgawad
-email: you@example.com
+email: ngawad@umich.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
