--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,6 @@
-"adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"aloul":
+  - firstname: ["Fadi", "F.", "Aloul", "Fadi Aloul"]
+    url: https://www.aloul.net/
 
 "podolsky":
   - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
