adjust author names

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,5 +1,5 @@
 "aloul":
-  - firstname: ["Fadi", "F.", "Aloul", "Fadi Aloul"]
+  - firstname: ["Fadi", "F Aloul", "Aloul", "Fadi Aloul"]
     url: https://www.aloul.net/
 
 "podolsky":
