--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -2,9 +2,9 @@
   - firstname: ["Fadi", "F Aloul", "Aloul", "Fadi Aloul"]
     url: https://www.aloul.net/
 
-"podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"zualkernan":
+  - firstname: ["Imran", "Imran A Zualkernan", "Zualkernan", "Imran Zualkernan"]
+    url: https://www.aus.edu/faculty/imran-zualkernan
 
 "rosen":
   - firstname: ["Nathan", "N."]
