adding an article from AUS

--- a/_config.yml
+++ b/_config.yml
@@ -160,6 +160,8 @@ disqus_shortname: al-folio # put your disqus shortname
 external_sources:
   - name: medium.com
     rss_url: https://medium.com/@al-folio/feed
+  - name: aus.edu
+    rss_url: https://www.aus.edu/media/news/aus-honors-students-for-excellence-in-graduate-studies
 
 # -----------------------------------------------------------------------------
 # Collections
