--- a/_config.yml
+++ b/_config.yml
@@ -160,7 +160,7 @@ disqus_shortname: al-folio # put your disqus shortname
 external_sources:
   - name: medium.com
     rss_url: https://medium.com/@al-folio/feed
-    
+
 # -----------------------------------------------------------------------------
 # Collections
 # -----------------------------------------------------------------------------
@@ -174,6 +174,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  press:
+    output: true
+    permalink: /press/:path/
 
 announcements:
   enabled: true
